@@ -1,24 +1,0 @@
-@x [1.2]
-@d banner==upTeX_banner
-@d banner_k==upTeX_banner_k
-@y
-@d banner==pTeX_banner
-@d banner_k==pTeX_banner_k
-@z
-
-@x
-@d uptex_version_code=ptex_version_code+1 {code for \.{\\uptexversion}}
-@d ptex_minor_version_code=uptex_version_code+1 {code for \.{\\ptexminorversion}}
-@y
-@d ptex_minor_version_code=ptex_version_code+1 {code for \.{\\ptexminorversion}}
-@z
-
-@x
-  uptex_version_code: print_esc("uptexversion");
-@y
-@z
-
-@x
-    uptex_version_code: cur_val:=upTeX_version;
-@y
-@z
